--- a/index.html
+++ b/index.html
@@ -4,8 +4,89 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>G3 Architect</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
-<body>
-    
+<body class="work-sans-font">
+    <header class="bg">
+        <nav class="navbar display-flex">
+            <h3 class="brand">G3 Architects</h3>
+            <ul class="nav-links display-flex">
+                <li class="nav-item"><a href="" class="nav-link dark-2">Home </a></li>
+                <li class="nav-item"><a href="" class="nav-link dark-2"> About  </a></li>
+                <li class="nav-item "><a href="" class="nav-link dark-2"> Contact Us  </a></li>
+                <li class="nav-item "><a href="" class="nav-link dark-2">Login</a></li>
+            </ul>
+        </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h1 class="banner-title">
+                    Brand New Group of Architects
+                </h1>
+                <p class="banner-description dark-3">
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
+                </p>
+                <button class="btn-primay">
+                    Explore More
+                </button>
+            </div>
+            <img src="images/banner.png" alt="" class="banner-image">
+        </div>
+    </header>
+    <main>
+        <!-- team section start -->
+        <section class="teams display-flex">
+            <div class="team-img-container">
+                <img src="images/team1.png" alt="two Architect discussing about design">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
+            <div class="our-features">
+                <h3 class="section-title"><span class="Quick-list dark-3">Quick list</span> <span>of Our</span> <span id="Features">Features</span></h3>
+                <p class="feature-description dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primay">
+                    Explore More
+                </button>
+                </div>
+        </section>
+        <!-- features will enjoy -->
+        <section>
+            <h3 class="section-title">
+                Features you will love & enjoy
+            </h3>
+        </section>
+        <!-- some facts -->
+         <section class="facts">
+            <h3 class="section-title">
+                Some Facts
+            </h3>
+            <p class="dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            <div class="fact-container">
+                <div class="fact">
+                    <img src="" alt="" class="fact-icon">
+                    <h4 class="fact-number"></h4>
+                    <h5 class="fact-name"></h5>
+                </div>
+                <div class="fact">
+                    <img src="" alt="" class="fact-icon">
+                    <h4 class="fact-number"></h4>
+                    <h5 class="fact-name"></h5>
+                </div>
+                <div class="fact">
+                    <img src="" alt="" class="fact-icon">
+                    <h4 class="fact-number"></h4>
+                    <h5 class="fact-name"></h5>
+                </div>
+                <div class="fact">
+                    <img src="" alt="" class="fact-icon">
+                    <h4 class="fact-number"></h4>
+                    <h5 class="fact-name"></h5>
+                </div>
+            </div>
+         </section>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
