--- a/index.html
+++ b/index.html
@@ -66,21 +66,21 @@
                    <div>
                     <img src="images/icons/ribon.png" alt="" class="fact-icon">
                     <h4 class="fact-number">54</h4>
-                    <h5 class="fact-name">Awards Winnings</h5>
+                    <h5 class="fact-name dark-3">Awards Winnings</h5>
                    </div>
                 </div>
                 <div class="fact-card display-flex">
                     <div>
                         <img src="images/icons/projects.png" alt="" class="fact-icon">
                     <h4 class="fact-number">1458</h4>
-                    <h5 class="fact-name">Project Finished</h5>
+                    <h5 class="fact-name dark-3">Project Finished</h5>
                     </div>
                 </div>
                 <div class="fact-card display-flex">
                     <div>
                         <img src="images/icons/customers.png" alt="" class="fact-icon">
                     <h4 class="fact-number">590</h4>
-                    <h5 class="fact-name">Clients Worked</h5>
+                    <h5 class="fact-name dark-3">Clients Worked</h5>
                     </div>
                     
                 </div>
@@ -88,12 +88,28 @@
                     <div>
                         <img src="images/icons/email.png" alt="" class="fact-icon">
                     <h4 class="fact-number">22578</h4>
-                    <h5 class="fact-name">Email Send</h5>
+                    <h5 class="fact-name dark-3">Email Send</h5>
                     </div>
                     
                 </div>
             </div>
          </section>
+         <!-- our sponsors -->
+          <section>
+            <div class="sponsor-info">
+                <h3 class="section-title">
+                    Our Sponsors
+                </h3>
+                <p class="dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            </div>
+            <div class="sponsor-companies">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+            </div>
+          </section>
     </main>
     <footer>
 
