--- a/index.html
+++ b/index.html
@@ -50,10 +50,39 @@
                 </div>
         </section>
         <!-- features will enjoy -->
-        <section>
-            <h3 class="section-title">
-                Features you will love & enjoy
-            </h3>
+        <section class="features display-flex">
+            <div>
+                <h3 class="section-title" id="feature-section-title">
+                    Features you will <br> love & enjoy
+                </h3>
+                <p class="dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <!-- featured card container -->
+                 <div class="feature-card">
+                    <h4 class="feature-title"> Dexktop & Mobile Version</h4>
+                    <p class="dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                 </div>
+                 <div class="feature-card">
+                    <h4 class="feature-title"> Drag & Drop Builder</h4>
+                    <p class="dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                 </div>
+                 <div class="feature-card">
+                    <h4 class="feature-title"> Awesome Modern Design</h4>
+                    <p class="dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                 </div>
+                 <div class="feature-card">
+                    <h4 class="feature-title"> Super Easy to Edit</h4>
+                    <p class="dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                 </div>
+            </div>
+            <div>
+                <img src="images/architect.png" alt="">
+                <button class="btn-primay">
+                    <span id="experience-year">10+Years</span>
+                    <br>
+                    <span>Experience</span>
+                </button>
+            </div>
+            
         </section>
         <!-- some facts -->
          <section class="facts">
