--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
                     <p class="dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
                  </div>
             </div>
-            <div>
+            <div class="featured-architect">
                 <img src="images/architect.png" alt="">
-                <button class="btn-primay">
+                <button id="experience-badge" class="btn-primay">
                     <span id="experience-year">10+Years</span>
                     <br>
                     <span>Experience</span>
@@ -140,8 +140,10 @@
             </div>
           </section>
     </main>
-    <footer>
-
+    <footer class="footer ">
+        
+            <input type="text" name="" id="" placeholder="All rights reserved copyright@2023 startup landing page design" class="input">
+       
     </footer>
 </body>
 </html>
