--- a/index.html
+++ b/index.html
@@ -140,10 +140,10 @@
             </div>
           </section>
     </main>
-    <footer class="footer ">
+    <!-- <footer class="footer ">
         
             <input type="text" name="" id="" placeholder="All rights reserved copyright@2023 startup landing page design" class="input">
        
-    </footer>
+    </footer> -->
 </body>
 </html>
